All sites: Make text in search field visible in oldIE. Fixes #184.

--- a/themes/jquery/css/base.css
+++ b/themes/jquery/css/base.css
@@ -1479,6 +1479,7 @@ nav#main .searchform input:focus {
 
 .no-boxshadow nav#main .searchform input {
 	background: #fff;
+	color: #333;
 }
 
 /*
